Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46532

CanvasContext::getVertexAttrib(n, VERTEX_ATTRIB_ARRAY_BUFFER_BINDING) doesn't return correct buffer in wip/threading branch

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0 RC
    • 5.6.0 Alpha
    • Canvas3D
    • None
    • 611e2e940f54210346330657077038324deabd02

      Canvas3D_conformance_gl_object_get_calls::test_gl_object_get_calls fails because of this.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes