Fix getting GL_VERTEX_ATTRIB_ARRAY_BUFFER_BINDING

We need to return the canvas side resource id of the buffer matching
the id we get from OpenGL.

Change-Id: I99631013804d706794a8f477e0f57b354eba489d
Task-number: QTBUG-46532
Reviewed-by: Tomi Korpipää <tomi.korpipaa@theqtcompany.com>
Reviewed-by: Pasi Keränen <pasi.keranen@digia.com>